<resources>
    <string name="app_name">BusxHacktiv</string>
    <string name="bux_is_a_online">Bux is a online booking service for Bus transportation. login now to user Bux services.</string>
    <string name="welcome">Welcome</string>
    <string name="picture">picture</string>
    <string name="sign_up_wit">Sign up with google</string>
    <string name="bus_exchange">bus exchange</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="almost_there">Almost there</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_number">Save number</string>
    <string name="your_phone_number_here">Your Phone number here</string>
    <string name="fill_your">Fill your phone number below, so we can easily catch you up.</string>
    <string name="goback">goback</string>
    <string name="take_me_to_bux">TAKE ME TO BUX</string>
    <string name="you_re_all_set_and_ready_to_use_bux_enjoy_our_service">You\'re all set and ready to use Bux. Enjoy our service!</string>
    <string name="everything_s_up">Everything\'s up!</string>
    <string name="title_activity_bus">bus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="tickets">Tickets</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="departure">Departure</string>
    <string name="location">location</string>
    <string name="arrival">Arrival</string>
    <string name="passangers">Passangers</string>
    <string name="date">Date</string>
    <string name="_1_ppl">1 ppl</string>
    <string name="search_bus">search bus</string>
    <string name="book_now">book now</string>
    <string name="dropdown">dropdown</string>
    <string name="_11_11_2022">11-11-2022</string>
    <string name="seat_2">Seat 2</string>
    <string name="sort_by_best_experience">Sort by Best Experience</string>
    <string name="sempati_star">Sempati Star</string>
    <string name="p_1963_nm">P 1963 NM</string>
    <string name="_17_30">17.30</string>
    <string name="_09_30">09.30</string>
    <string name="rp_166_000_00">Rp 166.000,00</string>
    <string name="seat">/seat</string>
    <string name="_120_reviews">120 Reviews</string>
    <string name="_4_9_5">4.9/5</string>
    <string name="pahala_kencana">Pahala Kencana</string>
    <string name="_16_00">16.00</string>
    <string name="_02_30">02.30</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="star">star</string>
    <string name="rating">9/10</string>
    <string name="see_a_picture">See a picture</string>
    <string name="friday_23_jul_2019">Friday, 23 Jul 2019</string>
    <string name="bus_no">Bus No</string>
    <string name="available_seat">Available Seat</string>
    <string name="_24_seat_are_available">24 Seat are available</string>
    <string name="PUBLISH_KEY">pk_test_51JmDRXCMVgixHBfbPK4UyzfbjuGGMfE1WNvxZypHcEs2go9c395bbNmhzsQBnYEIrico3unSFptcX59OwvKOg1qu002EtUjSV8</string>
    <string name="SECRET_KEY">sk_test_51JmDRXCMVgixHBfbwFEMzU2q5xTQZUNSEywIrOmR755nTWM4JYqXUKwNjYxto2aLUJKxgUxabcvBNt5fftlv42Tm00nxwUJfu0</string>
    <string name="payment">Payment</string>
    <string name="total_payment">Total payment</string>
    <string name="rp166_000_00">Rp166.000,00</string>
    <string name="please_select_one_of_the_payment_method_below">please select one of the payment method below</string>
    <string name="payment_method">Payment Method</string>
    <string name="stripe">Stripe</string>
    <string name="select">select</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="personal_information">Personal Information</string>
    <string name="name">Name</string>
    <string name="_08123990823">08123990823</string>
    <string name="seats">Seats</string>
    <string name="_2">2</string>
    <string name="po_name">PO Name</string>
    <string name="schedule">Schedule</string>
    <string name="estimated_time">Estimated time</string>
    <string name="_13h45m">13h45m</string>
    <string name="seat_no">Seat no</string>
    <string name="_9_10">9,10</string>
    <string name="total">Total</string>
    <string name="continue_to_payment">continue to payment</string>
    <string name="ticket_detail">Ticket Detail</string>
    <string name="book_no_1090">Book No.1090</string>
    <string name="status">Status</string>
    <string name="paid">Paid</string>
    <string name="detail">Detail</string>
    <string name="detail_status_order">Detail status order</string>
    <string name="on_going">on going</string>
    <string name="selesai">Selesai</string>
</resources>