<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mahar.busxhacktiv.bus.HomeFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tickets"
        android:name="com.mahar.busxhacktiv.bus.TicketsFragment"
        android:label="@string/tickets"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mahar.busxhacktiv.bus.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.mahar.busxhacktiv.bus.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />


</navigation>