<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.PaymentDetailActivity">
    <LinearLayout
        android:layout_marginHorizontal="32dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:id="@+id/actionbar"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/goback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_gravity="center"
            android:contentDescription="@string/goback"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:textStyle="bold"
                android:textColor="#3D3D3D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete_booking"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_information"
        android:layout_below="@id/actionbar"
        android:id="@+id/tv1"
        android:layout_marginHorizontal="32dp"
        android:textSize="14sp"
        android:textColor="#3d3d3d"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@id/ly1"
        android:layout_centerHorizontal="true"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv1"
        android:layout_marginTop="12dp"
        android:background="@drawable/background_popup"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/name"
            android:textColor="#D8D8D8"
            android:textSize="12sp"
            android:translationY="-4.8sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#585858"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/phone_number"
                    android:textColor="#d8d8d8"
                    android:textSize="12sp"
                    android:translationY="-4.8sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_08123990823"
                    android:textColor="#adadad"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="10sp"
                    android:text="@string/seats"
                    android:textColor="#d8d8d8"
                    android:textSize="12sp"
                    android:translationY="-4.8sp" />

                <TextView
                    android:id="@+id/tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textColor="#adadad"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ly1"
        android:id="@+id/payment"
        android:text="@string/payment_method"
        android:layout_marginHorizontal="32dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="14sp"
        android:textColor="#3d3d3d"/>
    <LinearLayout
        android:paddingVertical="15dp"
        android:background="@drawable/background_popup"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/payment"
        android:paddingHorizontal="30dp"
        android:orientation="vertical"
        android:id="@+id/ly2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/po_name"
                android:textColor="#d8d8d8"
                android:textSize="12sp"
                android:lineSpacingExtra="10sp"
                android:translationY="-4.8sp"/>

            <TextView
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bus_no"
                android:textColor="#d8d8d8"
                android:textSize="12sp"
                android:lineSpacingExtra="10sp"
                android:translationY="-4.8sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sempati_star"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#585858"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p_1963_nm"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                android:textColor="#9a9a9a"
                android:lineSpacingExtra="10sp"
                android:translationY="-4.8sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:lineSpacingExtra="10sp"
                android:textColor="#d8d8d8"
                android:textSize="12sp"
                android:translationY="-4.8sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="10sp"
                android:textColor="#d8d8d8"
                android:textSize="12sp"
                android:translationY="-4.8sp"
                android:textAlignment="textEnd"
                android:text="@string/estimated_time"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17_30"
                style="@style/time_bus"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/departure"
                    style="@style/style_arrival_departure_payment_detail"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_departure"
                    style="@style/style_arrival_departure_payment_detail"
                    android:textStyle="normal"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                style="@style/style_arrival_departure_payment_detail"
                android:text="@string/_13h45m"/>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_09_30"
                style="@style/time_bus"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arrival"
                    style="@style/style_arrival_departure_payment_detail"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_arrival"
                    style="@style/style_arrival_departure_payment_detail"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seat_no"
                    android:lineSpacingExtra="10sp"
                    android:textColor="#d8d8d8"
                    android:textSize="12sp"
                    android:translationY="-4.8sp"
                    android:textAlignment="textEnd"/>
                <TextView
                    style="@style/style_arrival_departure_payment_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9_10"
                    android:id="@+id/list_seat"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:paddingVertical="15dp"
        android:background="@drawable/background_popup"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ly2"
        android:paddingHorizontal="30dp"
        android:orientation="horizontal"
        android:backgroundTint="#C3C0C0"
        android:id="@+id/ly3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                android:textColor="#808080"
                android:textSize="14sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="textEnd"
                    android:layout_height="wrap_content"
                    android:text="1 X 166.000"
                    android:id="@+id/txt_ticket"
                    android:textColor="#808080"
                    android:textSize="14sp"/>
        </LinearLayout>
    <LinearLayout
        android:paddingVertical="15dp"
        android:background="@drawable/background_popup"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ly3"
        android:paddingHorizontal="30dp"
        android:orientation="horizontal"
        android:backgroundTint="#8749F2"
        android:id="@+id/ly4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:text="@string/rp_166_000_00"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginHorizontal="32dp"
        android:id="@+id/btnpayment"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#673AB7"
        android:text="@string/continue_to_payment"
        android:background="@drawable/background_popup"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:letterSpacing="0.01"/>
</RelativeLayout>