<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AddPhoneActivity"
    android:background="#eaeaea"
    >

    <TextView
        android:layout_marginHorizontal="32dp"
        android:id="@+id/almost_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        android:textAppearance="@style/almost_ther"
        android:layout_marginTop="60dp"/>
    <TextView
        android:layout_marginHorizontal="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subtitle"
        android:text="@string/fill_your"
        android:layout_below="@id/almost_there"
        android:lineSpacingExtra="10sp"
        android:translationY="-4.8sp"
        android:textAppearance="@style/fill_your_p"/>
    <ImageView
        android:layout_marginHorizontal="32dp"
        android:layout_below="@id/subtitle"
        android:id="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/people_phone"
        android:scaleType="fitXY"
        android:contentDescription="@string/picture"/>

    <RelativeLayout
        android:layout_marginHorizontal="32dp"
        android:id="@+id/rel_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_below="@id/picture"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:gravity="top"
            android:lineSpacingExtra="-3sp"
            android:text="@string/phone_number"
            android:textAppearance="@style/placeHolderInput_sm" />
        <!--        input phone-->
        <RelativeLayout
            android:id="@+id/field_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:background="@drawable/inputfield">

            <EditText
                android:id="@+id/input_phone"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:background="@drawable/frame_165"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="10dp"
                android:hint="@string/your_phone_number_here"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
    </RelativeLayout>
<!--    button-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#673AB7"
        android:text="@string/save_number"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:letterSpacing="0.01"/>
</RelativeLayout>