<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.FinishRegister"
    android:layout_marginHorizontal="32dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:id="@+id/actionbar"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/goback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_gravity="center"
            android:contentDescription="@string/goback"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bus"
                />
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:layout_below="@id/actionbar"
        android:id="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:background="@drawable/checklist"
        android:scaleType="fitXY"
        android:contentDescription="@string/picture"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everything_s_up"
        android:layout_below="@id/picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#585858"
        android:id="@+id/title"/>
    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textColor="#ADADAD"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:lineSpacingExtra="10sp"
        android:translationY="-4.8sp"
        android:textAlignment="center"
        android:layout_marginTop="25dp"
        android:text="@string/you_re_all_set_and_ready_to_use_bux_enjoy_our_service"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#673AB7"
        android:text="@string/take_me_to_bux"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:letterSpacing="0.01"/>
</RelativeLayout>