<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    android:background="#eaeaea"
    tools:context=".bus.ListProvinsi">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/navbar">
        <ImageView
            android:id="@+id/goback"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:layout_gravity="center"
            android:contentDescription="@string/goback"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bus"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/field_provinsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navbar"
        android:layout_marginTop="20dp"
        android:background="@drawable/inputfield"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/input_from"
                style="@style/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:background="@drawable/frame_165"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:hint="@string/departure"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginBottom="10dp"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/input_where"
                style="@style/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:background="@drawable/frame_165"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="10dp"
                android:hint="@string/arrival"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/enter"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            android:contentDescription="enter" />
    </LinearLayout>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/field_provinsi"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:translationZ="10dp"
        android:visibility="gone"
        android:id="@+id/pb"/>
</RelativeLayout>